[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
description = "A very small part of Unix/Linux tool `grep` made with Rust for learning purpose while reading and studying the Rust Book"
license = "MIT"
authors = ["Łukasz Marek Stachnik <ls.warss98@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3